--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- <link id="style" href="dark.css" rel="stylesheet" > -->
 </head>
 
-<body>
+<body onload='renderList()'>
   <main>
     <div class="container">
       <div class="con3"><h2>T0-Do List</h2><div id="dark" onclick="changeStyle()"></div></div>
